test/JDBC/expected/BABEL-911.out
-- BABEL-911: make sure table column constraints don't get confused as variable
-- constraints.
declare @tableVar1 table (a int not null, b int default 0, c nvarchar(60) collate Arabic_CS_AS);
select * from @tableVar1;
GO
~~START~~
int#!#int#!#nvarchar
~~END~~


-- NOT NULL after ')' should be parsed as variable constraint and should report
-- error.
declare @tableVar1 table (a int) not null;
end;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'not' at line 3 and character position 33)~~

